# MethAmplicons2

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: workflow.yml
src/methamplicons/: __init__.py  extract_data.py  extract_meth.py  flash  main.py  plotter.py
