[tool.poetry]
name = "methamplicons"
version = "0.1"
description = "Show the methylation status of amplicons for regions of interest"
authors = ["Brett Liddell <brett.liddell@qimrberghofer.edu.au>", "Olga Kondrashova <olga.kondrashova@qimrberghofer.edu.au>"]
readme = "README.md"
license = "MIT License"
classifiers = [
    "Programming Language :: Python :: 3.6.8",
    "License :: MIT License"
]

[tool.poetry.dependencies]
python = ">=3.6.8"
pandas = ">=1.1.5"
numpy = "*"
pillow = "8.3.2"
matplotlib = "3.3.1"
seaborn = "0.11.1"
joypy = "0.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
methamplicons = "methamplicons.main:main"
