[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "methamplicons"
authors = [
    { name = "Brett Liddell", email = "brett.liddell@qimrberghofer.edu.au" },
    { name = "Olga Kondrashova", email = "olga.kondrashova@qimrberghofer.edu.au" }
]
description = "Description of your project"
readme = "README.md"
license = "MIT"
dependencies = [
    "pandas >=1.1.5",
    "numpy",
    "pillow ==8.3.2",
    "matplotlib ==3.3.1",
    "seaborn ==0.11.1",
    "joypy ==0.2.2"
]
python-requires = ">=3.6"

[project.scripts]
methamplicons = "methamplicons.main:main"

[project.urls]
homepage = "https://github.com/molonc-lab/MethAmplicons2"

[tool.flit.module]
data-files = ["flash"]


