[metadata]
name = methamplicons
version = file: VERSION
description = Show the methylation status of amplicons for regions of interest
long_description = file: README.md
author = Brett Liddell
author_email = brett.liddell@qimrberghofer.edu.au
license = MIT License
classifiers:
    Programming Language :: Python :: 3.6.8
    License :: MIT License

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6.8

[options.packages.find]
where = src